Extensions: clicking on the OFFLINE icon on the status bar should not turn internet on #122652

Closed
opened 2024-06-03 13:11:14 +02:00 by Dalai Felinto · 0 comments

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-06-03 02:41, hash: 5bc71c870435

Short description of error
Clicking on the INTERNET_OFFLINE icon on the status bar should launch the user preferences, not turn allow internet access on.


This was introduced with c9a99c7eeb. The original patch wasn't intended to be committed as it was. But to use as a base for a new one, where we could still have:

  • extensions.userpref_show_online: Old operator, called from status bar.
  • extensions.allow_online_access: New operator, called from the user preferences.
**Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-06-03 02:41, hash: `5bc71c870435` **Short description of error** Clicking on the INTERNET_OFFLINE icon on the status bar should launch the user preferences, not turn allow internet access on. --- This was introduced with c9a99c7eeb4. The original patch wasn't intended to be committed as it was. But to use as a base for a new one, where we could still have: * `extensions.userpref_show_online`: Old operator, called from status bar. * `extensions.allow_online_access`: New operator, called from the user preferences.
Campbell Barton was assigned by Dalai Felinto 2024-06-03 15:19:58 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-06-03 15:50:16 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#122652
No description provided.