Fix #122652: Clicking offline status icon enabled online access

Oversight in [0] made clicking on the status bar icon enable online
access instead of opening the preferences.

[0]: c9a99c7eeb4293f3fee21bd10865c6e36973b05b